# selfmade-python-practice

./: README.md  pardesicat.py  pcat-function-wise.py  pyproject.toml
